infra/dev-k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - app.carsties.com
      - api.carsties.com
      secretName: carsties-app-tls
  rules:
    - host: app.carsties.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
    - host: api.carsties.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
